--- a/stock_cubiscan/wizard/cubiscan_wizard.xml
+++ b/stock_cubiscan/wizard/cubiscan_wizard.xml
@@ -19,13 +19,14 @@
                 <field name="line_ids">
                     <tree editable="bottom" create="0" delete="0">
                         <field name="sequence" invisible="1" />
+                        <field name="required" invisible="1" />
                         <field name="name" />
                         <field name="qty" />
-                        <field name="max_weight" options="{'bg_color': 'lightcoral: max_weight == 0.0'}" />
-                        <field name="length" options="{'bg_color': 'lightcoral: length == 0.0'}" />
-                        <field name="width" options="{'bg_color': 'lightcoral: width == 0.0'}" />
-                        <field name="height" options="{'bg_color': 'lightcoral: height == 0.0'}" />
-                        <field name="volume" options="{'bg_color': 'lightcoral: volume == 0.0'}" />
+                        <field name="max_weight" options="{'bg_color': 'lightcoral: max_weight == 0.0 and required'}" />
+                        <field name="length"     options="{'bg_color': 'lightcoral: length == 0.0 and required'}" />
+                        <field name="width"      options="{'bg_color': 'lightcoral: width == 0.0 and required'}" />
+                        <field name="height"     options="{'bg_color': 'lightcoral: height == 0.0 and required'}" />
+                        <field name="volume"     options="{'bg_color': 'lightcoral: volume == 0.0 and required'}" />
                         <button name="cubiscan_measure" type="object" string="CubiScan" class="btn btn-warning" />
                         <field name="barcode" />
                     </tree>
