Refactor: include push rules in the same "workflow" used for pull rules

--- a/stock_routing_operation/views/stock_routing_views.xml
+++ b/stock_routing_operation/views/stock_routing_views.xml
@@ -71,6 +71,7 @@
         <field name="model">stock.routing</field>
         <field name="arch" type="xml">
             <tree string="Stock Routing">
+                <field name="sequence" widget="handle" />
                 <field name="location_id" />
             </tree>
         </field>
