--- a/stock_reserve_rule/views/stock_reserve_rule_views.xml
+++ b/stock_reserve_rule/views/stock_reserve_rule_views.xml
@@ -32,13 +32,14 @@
                         <field name="company_id" groups="base.group_multi_company" />
                     </group>
                 </group>
-                <group string="Removal Rules" name="rule">
+                <group string="Removal Rules" name="rule" col="1">
                     <field name="rule_removal_ids" nolabel="1">
-                        <tree string="Removal Rules">
+                        <tree string="Removal Rules" decoration-warning="missing_reserve_rule">
                             <field name="sequence" widget="handle" />
                             <field name="name" />
                             <field name="location_id" />
                             <field name="removal_strategy" />
+                            <field name="missing_reserve_rule" invisible="1"/>
                         </tree>
                         <form string="Removal Rule">
                             <group>
@@ -61,6 +62,10 @@
                             </group>
                         </form>
                     </field>
+                    <field name="missing_reserve_rule" invisible="1"/>
+                    <strong attrs="{'invisible': [('missing_reserve_rule', '=', False)]}" style="color:red;">
+                      WARNING: some of the removal rules are missing a reservation rule with a higher priority. If it is desirable you should create them to ensure that the reservation on the related locations will use these rules first instead of the current one.
+                    </strong>
                 </group>
             </form>
         </field>
@@ -89,6 +94,7 @@
                 <field name="sequence" widget="handle" />
                 <field name="name" />
                 <field name="location_id" />
+                <field name="rule_domain"/>
             </tree>
         </field>
     </record>
