[IMP] stock_reserve_rule: add constraints on fallback locations

--- a/stock_reserve_rule/views/stock_reserve_rule_views.xml
+++ b/stock_reserve_rule/views/stock_reserve_rule_views.xml
@@ -89,6 +89,7 @@
                 <field name="sequence" widget="handle" />
                 <field name="name" />
                 <field name="location_id" />
+                <field name="rule_domain"/>
             </tree>
         </field>
     </record>
