--- a/stock_reserve_rule/views/stock_reserve_rule_views.xml
+++ b/stock_reserve_rule/views/stock_reserve_rule_views.xml
@@ -22,6 +22,7 @@
                         <field name="active" invisible="1" />
                         <field name="location_id" />
                         <field name="fallback_location_id" />
+                        <field name="sequence" />
                     </group>
                     <group>
                         <field
@@ -64,7 +65,7 @@
                     </field>
                     <field name="missing_reserve_rule" invisible="1"/>
                     <strong attrs="{'invisible': [('missing_reserve_rule', '=', False)]}" style="color:red;">
-                      WARNING: some of the removal rules are missing a reservation rule with a higher priority. If it is desirable you should create them to ensure that the reservation on the related locations will use these rules first instead of the current one.
+                      WARNING: some of the removal rules are missing a reservation rule with a lower sequence. If it is desirable you should create them to ensure that the reservation on the related locations will use these rules first instead of this one.
                     </strong>
                 </group>
             </form>
