--- a/stock_cubiscan/views/cubiscan_view.xml
+++ b/stock_cubiscan/views/cubiscan_view.xml
@@ -23,12 +23,18 @@
                 <sheet>
                     <field name="id" invisible="1" />
                     <group>
-                        <group name="cubiscan">
+                        <group name="device">
                             <field name="name" />
+                            <field name="driver" />
+                            <field name="warehouse_id" />
+                        </group>
+                        <group
+                            name="cubiscan"
+                            attrs="{'invisible': [('driver', '!=', 'cubiscan')]}"
+                        >
                             <field name="device_address" />
                             <field name="port" />
                             <field name="timeout" />
-                            <field name="warehouse_id" />
                         </group>
                         <group />
                     </group>
@@ -45,6 +51,7 @@
                 decoration-success="state == 'ready'"
             >
                 <field name="name" />
+                <field name="driver" />
                 <field name="device_address" />
                 <field name="port" />
                 <field name="timeout" />
