[IMP] stock_measuring_device[_zippcube[_reception_screen]]
- Changed the f-strings. One reviewer commented that they
  are not translatable. I now use the old reliable format().
- A new module stock_measuring_device has been added with
  the common parts: the wizard is now common for any
  measuring device, or at least intends to be.
- Pending: Making the model measuring.device an abstract
  model to create new specific measuring devices, such as
  zippcube.

--- a/stock_measuring_device/static/src/scss/measuring_wizard.scss
+++ b/stock_measuring_device/static/src/scss/measuring_wizard.scss
@@ -1,5 +1,5 @@
 .o_web_client.o_fullscreen {
-    .o_form_view.zippcube_wizard {
+    .o_form_view.measuring_wizard {
         font-size: 16px;
 
         @include media-breakpoint-up(x1) {
